# 500magic

./: .dockerignore  Dockerfile  README.md  fly.toml  gunicorn.conf.py  pyproject.toml
.github/: copilot-instructions.md
data/: .gitignore
src/: manage.py
src/500magic/: __init__.py
src/fivehundredmagic/: asgi.py  settings.py  urls.py  wsgi.py
src/matchup/: db_router.py  elo.py  models.py  tests.py  urls.py  views.py
src/matchup/management/commands/: cleanup_matchups.py  matchup_stats.py  recalculate_elo.py  tally.py
src/matchup/migrations/: 0001_initial.py  0002_matchup.py  0003_cardrating.py
src/matchup/static/: site.webmanifest
src/matchup/templates/matchup/: error.html  leaderboard.html  matchup.html
