[project]
name = "500magic"
version = "0.1.0"
description = "Figure out the 500 best-known Magic cards"
readme = "README.md"
authors = [
    { name = "Matt Cooper", email = "vtbassmatt@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
