[project]
name = "fivehundredmagic"
version = "0.1.0"
description = "Figure out the 500 best-known Magic cards"
readme = "README.md"
authors = [
    { name = "Matt Cooper", email = "vtbassmatt@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "django>=5.2",
    "gunicorn>=25.0.3",
    "whitenoise[brotli]>=6.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fivehundredmagic", "src/matchup"]
